log.txt
rm -f *.o master users nodes *~
gcc -c -std=c89 -g -O0 -pedantic -D_GNU_SOURCE -DDEBUG src/common.c src/utils/*.c
src/utils/lists.c:2: warning: ISO C forbids an empty translation unit [-Wpedantic]
gcc -std=c89 -g -O0 -pedantic -D_GNU_SOURCE -DDEBUG src/master.c  src/print.c src/parser.c *.o -lm -o master
gcc -std=c89 -g -O0 -pedantic -D_GNU_SOURCE -DDEBUG src/users.c *.o -lm -o users
gcc -std=c89 -g -O0 -pedantic -D_GNU_SOURCE -DDEBUG src/nodes.c *.o -lm -o nodes
src/nodes.c: In function ‘sleepMethod’:
src/nodes.c:44:5: error: ‘randSleepTime’ undeclared (first use in this function)
   44 |     randSleepTime.tv_sec = 0;
      |     ^~~~~~~~~~~~~
src/nodes.c:44:5: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Makefile:34: debug] Error 1
